argocd/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
              name: http-admin
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          livenessProbe:
            tcpSocket:
              port: 53
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /admin/
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          volumeMounts:
            - name: etc-pihole-volume
              mountPath: "/etc/pihole"
            - name: etc-dnsmasq-volume
              mountPath: "/etc/dnsmasq.d"
      volumes:
        - name: etc-pihole-volume
          hostPath:
            path: /data/pihole/etc-pihole
            type: DirectoryOrCreate
        - name: etc-dnsmasq-volume
          hostPath:
            path: /data/pihole/dnsmasq.d
            type: DirectoryOrCreate
