argocd/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.mvps.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-svc
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.mvps.com.br
      secretName: pihole-tls
